# vscode_stm32_example

./: .cproject.bak  .gitignore  .mxproject  .project.bak  CMakeLists.txt  README.md  STM32G030.svd  STM32G030F6Px_FLASH.ld  stvscode.ioc
Core/Inc/: main.h
Core/Src/: main.c  stm32g0xx_it.c
cmake/: st-project.cmake
cmake/stm32cubemx/: CMakeLists.txt
